	* Launch ocamldebug from the project's root directory [Dmitry Bely]
	* Script file support for debugger [Dmitry Bely]
	* Additional make options [Dmitry Bely] 
	* Fixed exception when make target list is empty [Dmitry Bely]
	
* 1.2.4 (January 11 2009)
	* Toplevel now uses Eclipse text font (which can be changed in preferences)
	* Split launch configuration into two pages : main and debug
	* Debugger root directory is now configurable (between project root and executable directory)
	* Removed "Makefile Paths" properties page which was useless (see <a href="http://ocaml.eclipse.free.fr/forum/viewtopic.php?f=4&t=94&start=0">this forum post<a/>) 
	* Preference initializer now sets default ocamldebug path on Windows (O'Caml 3.11)
	* Checkpoints are disabled by default on Windows since they are not supported by ocamldebug on Windows

* 1.2.5 (July 14 2009)
	* Added the quick outline (Ctrl+O by default). Allows access to any element by name in the editor very quickly.
	* Added an action to sort the outline view
	* Added an "other flags" section to ocamlbuild parameters
	* Added an option to disable generating type information with ocamlbuild
	* Fixed a problem with definition offsets, which caused some files to be unavailable for code help (see <a href="http://ocaml.eclipse.free.fr/forum/viewtopic.php?f=2&t=213&start=0">this forum post<a/>)
	* Fixed a problem when an empty path was passed to ocamlbuild
	* Extracted sources and help into different plug-ins to avoid forcing users to download the whole documentation each time an update is done, since the help doesn't change nearly as often as the binaries.
	
* 1.2.6 (November 28 2009)
	* Fixed a StackOverflowError while parsing very big files
	* Implemented support for editing code templates
	* Improved code template system
	
* 1.2.7 (November 28 2009)
	* Fixed missing default templates file (templates.xml) in the build
	
* 1.2.8
	* Added completion on the ocamlbuild targets field 