@@ -165,4 +165,7 @@
 	* Fixed missing default templates file (templates.xml) in the build
 	
 * 1.2.8
-	* Added completion on the ocamlbuild targets field 
+	* Added completion on the ocamlbuild targets field
+	* Don't automatically add "_build" folder or one of its sub-directories to project paths
+	* Display a message box on Windows when building with Ocamlbuild and Cygwin is not installed
+
